(update) ig class selectors prefixes updated to igx

--- a/demos/app/dialog/sample.component.html
+++ b/demos/app/dialog/sample.component.html
@@ -43,11 +43,11 @@
         rightButtonBackgroundColor="#0375be"
         rightButtonColor="white"
         backgroundClick="true">
-        <div class="ig-form-group">
+        <div class="igx-form-group">
             <input type="text" igxInput />
             <label igxLabel>Username</label>
         </div>
-        <div class="ig-form-group">
+        <div class="igx-form-group">
             <input type="password" igxInput />
             <label igxLabel>Password</label>
         </div>
