--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -1,18 +1,18 @@
 <h3>Text Inputs</h3>
 
-<div class="ig-form-group">
-    <input type="text" igxInput [(ngModel)]="user.name" />
+<div class="igx-form-group">
+    <input type="text" igxInput [(ngModel)]="user.name"/>
     <label igxLabel>Username</label>
 </div>
 <p><code>Selected value = {{ user.name || ''}}</code></p>
 
-<div class="ig-form-group">
+<div class="igx-form-group">
     <input type="password" igxInput placeholder="{{placeholder}}" [(ngModel)]="user.password" />
     <label igxLabel>Password</label>
 </div>
 <p><code>Selected value = {{ user.password || ''}}</code></p>
 
-<div class="ig-form-group">
+<div class="igx-form-group">
     <textarea placeholder="{{placeholder}}" igxInput [(ngModel)]="user.comment"></textarea>
     <label igxLabel>Textarea</label>
 </div>
