--- a/demos/app/list/sample.component.html
+++ b/demos/app/list/sample.component.html
@@ -1,11 +1,11 @@
 <div class="wrapper">
     <h4>Data Source Filtered List</h4>
-    <div class="ig-form-group">
-        <input class="ig-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
+    <div class="igx-form-group">
+        <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
         <label igxLabel>
             <i class="material-icons">search</i>
         </label>
-        <span class="ig-form-group__clear--hidden">
+        <span class="igx-form-group__clear--hidden">
             <i class="material-icons">clear</i>
         </span>
     </div>
@@ -18,12 +18,12 @@
 <div class="wrapper">
     <h4>Declarative Fitered List</h4>
     <igx-checkbox [checked]="true" #checkbox>Perform filtering</igx-checkbox>
-    <div class="ig-form-group">
-        <input class="ig-form-group__input--search" placeholder="Search List" [(ngModel)]="search2" />
+    <div class="igx-form-group">
+        <input class="igx-form-group__input--search" placeholder="Search List" [(ngModel)]="search2" />
         <label igxLabel>
             <i class="material-icons">search</i>
         </label>
-        <span class="ig-form-group__clear--hidden">
+        <span class="igx-form-group__clear--hidden">
             <i class="material-icons">clear</i>
         </span>
     </div>
