--- a/src/radio/radio.component.html
+++ b/src/radio/radio.component.html
@@ -1,5 +1,5 @@
-<div class="ig-control">
-    <input class="ig-control__radio" type="radio" #radio
+<div class="igx-control">
+    <input class="igx-control__radio" type="radio" #radio
         [attr.id]="id"
         [attr.name]="name"
         [attr.value]="value"
@@ -9,5 +9,5 @@
         (change)="onChange($event)"
         (focus)="onFocus($event)"
         (blur)="onBlur($event)"/>
-    <label class ="ig-control__label" [attr.for]="id"><ng-content></ng-content></label>
+    <label class ="igx-control__label" [attr.for]="id"><ng-content></ng-content></label>
 </div>
