--- a/src/themes/material/modules/_avatar.scss
+++ b/src/themes/material/modules/_avatar.scss
@@ -1,5 +1,5 @@
 // Component styling
-@include b(ig-avatar){
+@include b(igx-avatar){
     @extend %igx-avatar-display;
 
     @include m(rounded) {
