--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -1,4 +1,4 @@
-@include b(ig-control) {
+@include b(igx-control) {
     // Save the reference to this block element
     // in a variable for scoped access
     $block: &;
