--- a/src/avatar/avatar.component.html
+++ b/src/avatar/avatar.component.html
@@ -1,6 +1,6 @@
-<div class="ig-avatar">
-    <img #image *ngIf="src || initials" src="{{src}}" class="ig-avatar--image ig-avatar--{{size}}" [class.ig-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" />
-    <span *ngIf="!src && !initials" class="ig-avatar--{{size}} ig-avatar--icon" [class.ig-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" [style.color]="color">
+<div class="igx-avatar">
+    <img #image *ngIf="src || initials" src="{{src}}" class="igx-avatar--image igx-avatar--{{size}}" [class.igx-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" />
+    <span *ngIf="!src && !initials" class="igx-avatar--{{size}} igx-avatar--icon" [class.igx-avatar--rounded]="isRounded" [style.backgroundColor]="bgColor" [style.color]="color">
         <i class="material-icons">{{icon}}</i>
     </span>
     <ng-content></ng-content>
