--- a/src/carousel/carousel.component.html
+++ b/src/carousel/carousel.component.html
@@ -1,17 +1,17 @@
-<div tabindex="1" (mouseenter)="stop()" (mouseleave)="play()" (keydown)="($event)" class="ig-carousel">
-    <ul class="ig-carousel__indicators" [hidden]="slides.length <= 1">
+<div tabindex="1" (mouseenter)="stop()" (mouseleave)="play()" (keydown)="($event)" class="igx-carousel">
+    <ul class="igx-carousel__indicators" [hidden]="slides.length <= 1">
         <li *ngFor="let slide of slides" [class.active]="slide.active === true" (click)="select(slide)"></li>
     </ul>
-    <div class="ig-carousel__inner">
+    <div class="igx-carousel__inner">
         <ng-content></ng-content>
     </div>
     <div template="ngIf navigation">
-        <a class="ig-carousel__arrow--prev" (click)="prev()" [hidden]="!slides.length">
+        <a class="igx-carousel__arrow--prev" (click)="prev()" [hidden]="!slides.length">
             <span>
                 <i class="material-icons">arrow_back</i>
             </span>
         </a>
-        <a class="ig-carousel__arrow--next" (click)="next()" [hidden]="!slides.length">
+        <a class="igx-carousel__arrow--next" (click)="next()" [hidden]="!slides.length">
             <span>
                 <i class="material-icons">arrow_forward</i>
             </span>
