(update) added snackbar styling and demo keyframe animations.

--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -3,7 +3,9 @@
 
 <button igxButton="flat" (click)="changeColor(snackbar)">Change color</button>
 
+<div class="snackbar-container">
 <igx-snackbar #snackbar
              [message]="message"
              [actionText]="actionName"
              (onAction)="undoColorChange(snackbar)"></igx-snackbar>
+</div>
