--- a/src/dialog/dialog-content.component.html
+++ b/src/dialog/dialog-content.component.html
@@ -1,10 +1,12 @@
 <div #dialog
     tabindex="-1"
     class="igx-dialog"
-    [class.igx-dialog--hidden]="!isOpen"
+    *ngIf="isOpen"
+    [@fadeInOut]="this.state"
     (click)="onDialogSelected($event)">
     <div #dialogWindow 
-        class="igx-dialog__window" 
+        class="igx-dialog__window"
+        [@flyInOut]='this.state'
         [attr.role]="role" 
         [attr.aria-labelledby]="titleId">
         <div [attr.id]="titleId" class="igx-dialog__window-title">
