--- a/src/themes/material/modules/_progress.scss
+++ b/src/themes/material/modules/_progress.scss
@@ -43,6 +43,10 @@
 @include b(progress-circular) {
     @extend %progress-circular-display;
 
+    @include e(innercircle) {
+        @extend %progress-circular-innercircle;
+    }
+
     @include e(circle) {
         @extend %progress-circular-circle;
     }
