Migrated GH pages to latest tag version.
Renamed imports, tags and directives.

--- a/demos/button/buttonssample.component.html
+++ b/demos/button/buttonssample.component.html
@@ -4,37 +4,37 @@
 <div class="flex-column  space-wrapper justify-content-start">
 
     <div class="flex-container flex-wrap justify-content-b">
-        <button igButton="flat" igRipple>Flat</button>
+        <button igxButton="flat" igxRipple>Flat</button>
 
-        <button igButton="raised" igRipple="white">Raised</button>
+        <button igxButton="raised" igxRipple="white">Raised</button>
 
-        <button igButton="raised" igButtonColor="#FBB13C" igButtonBackground="#340068" igRipple="white">Raised Custom</button>
+        <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="white">Raised Custom</button>
 
-        <button igButton="gradient" igRipple="white">Gradient Button</button>
+        <button igxButton="gradient" igxRipple="white">Gradient Button</button>
 
-        <button igButton="raised" [disabled]="true">Disabled</button>
+        <button igxButton="raised" [disabled]="true">Disabled</button>
     </div>
 
     <div class="special-position flex-column">
-        <span igButton="fab" igButtonColor="#484848" igButtonBackground="white" igRipple="#484848">
+        <span igxButton="fab" igxButtonColor="#484848" igxButtonBackground="white" igxRipple="#484848">
             <i class="material-icons">edit</i>
         </span>
 
-        <span igButton="fab" igRipple="white">
+        <span igxButton="fab" igxRipple="white">
             <i class="material-icons">add</i>
         </span>
     </div>
 
     <div class="flex-container">
-        <span igButton="icon" igRipple igRippleCentered="true">
+        <span igxButton="icon" igxRipple igxRippleCentered="true">
             <i class="material-icons">search</i>
         </span>
 
-        <span igButton="icon" igRipple igButtonColor="#E41C77" igRippleCentered="true">
+        <span igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true">
             <i class="material-icons">favorite</i>
         </span>
 
-            <span igButton="icon" igRipple igRippleCentered="true">
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
             <i class="material-icons">more_vert</i>
         </span>
     </div>
