--- a/demos/list/listsample.component.html
+++ b/demos/list/listsample.component.html
@@ -1,10 +1,10 @@
 <h1 class="componentTitle">List</h1>
 <p class="componentDesc">A component that displays items that can be declared or retrieved from a data source.</p>
-<ig-list #declarativeList>
-    <ig-list-header><h3>Mildly Sweet</h3></ig-list-header>
-    <ig-list-item>Red Delicious</ig-list-item>
-    <ig-list-item>Ambrosia</ig-list-item>
-    <ig-list-item>Rome</ig-list-item>
-    <ig-list-item>Golden Delicious</ig-list-item>
-    <ig-list-item>Cosmic Crisp</ig-list-item>
-</ig-list>
+<igx-list #declarativeList>
+    <igx-list-header><h3>Mildly Sweet</h3></igx-list-header>
+    <igx-list-item>Red Delicious</igx-list-item>
+    <igx-list-item>Ambrosia</igx-list-item>
+    <igx-list-item>Rome</igx-list-item>
+    <igx-list-item>Golden Delicious</igx-list-item>
+    <igx-list-item>Cosmic Crisp</igx-list-item>
+</igx-list>
