--- a/demos/ripple/ripplesample.component.html
+++ b/demos/ripple/ripplesample.component.html
@@ -1,6 +1,6 @@
 
 <h1 class="componentTitle">Ripple</h1>
 <p class="componentDesc">The ripple directive can be applied to every relatively positioned element.</p>
-<div igRipple="white" style="display: flex; align-items: center; justify-content: center;position: relative; width: 90%; height: 75px; background-color: #0375be; margin: 80px auto; border-radius: 2px; color: white; cursor: pointer;">
+<div igxRipple="white" style="display: flex; align-items: center; justify-content: center;position: relative; width: 90%; height: 75px; background-color: #0375be; margin: 80px auto; border-radius: 2px; color: white; cursor: pointer;">
     <p style="user-select: none;">Touch/Click Me!</p>
 </div>
