--- a/demos/avatar/avatarsample.component.html
+++ b/demos/avatar/avatarsample.component.html
@@ -1,35 +1,35 @@
 <h1 class="componentTitle">Avatar</h1>
 <p class="componentDesc">A component that displays an image, text or icon as avatar.</p>
 <div class="flex-container flex-wrap space-wrapper justify-content-center">
-    <ig-avatar src="http://lorempixel.com/300/300/people/6/" roundShape="false">
-        <ig-badge type="error" icon="favorite" position="bottom-right"></ig-badge>
-    </ig-avatar>
-    
-    <ig-avatar src="http://lorempixel.com/300/300/people/9/" roundShape="true">
-        <ig-badge type="error" icon="done" type="success"></ig-badge>
-    </ig-avatar>
+    <igx-avatar src="http://lorempixel.com/300/300/people/6/" roundShape="false">
+        <igx-badge type="error" icon="favorite" position="bottom-right"></igx-badge>
+    </igx-avatar>
 
-    <ig-avatar initials="RK" bgColor="#fbb13c"> </ig-avatar>
+    <igx-avatar src="http://lorempixel.com/300/300/people/9/" roundShape="true">
+        <igx-badge type="error" icon="done" type="success"></igx-badge>
+    </igx-avatar>
 
-    <ig-avatar initials="ZK" bgColor="#731963" roundShape="true"></ig-avatar>
+    <igx-avatar initials="RK" bgColor="#fbb13c"> </igx-avatar>
 
-    <ig-avatar roundShape="true" icon="person" bgColor="#0375be" data-init="SS"></ig-avatar>
+    <igx-avatar initials="ZK" bgColor="#731963" roundShape="true"></igx-avatar>
 
-    <ig-avatar color="gray"></ig-avatar>
-    
-    <ig-avatar initials="HA" width="100" size="potatos" bgColor="#340068">
-        <ig-badge type="info" icon="camera"></ig-badge>
-    </ig-avatar>
+    <igx-avatar roundShape="true" icon="person" bgColor="#0375be" data-init="SS"></igx-avatar>
 
-    <ig-avatar initials="PP" width="100" color="black" icon="person" roundShape="false" bgColor="#94feed">
-        <ig-badge iconBdg="person" value="7281" position="bottom-left"></ig-badge>
-    </ig-avatar>
+    <igx-avatar color="gray"></igx-avatar>
 
-    <ig-avatar src="http://66.media.tumblr.com/avatar_af166f12c520_128.png" size="medium" roundShape="true" bgColor="#e41c77">
-        <ig-badge position="top-left" type="error" icon="build"></ig-badge>
-    </ig-avatar>
+    <igx-avatar initials="HA" width="100" size="potatos" bgColor="#340068">
+        <igx-badge type="info" icon="camera"></igx-badge>
+    </igx-avatar>
 
-    <ig-avatar size="medium" src="http://fotouser.miarroba.st/99545357/300/sonic-kun.jpg" roundShape="true" bgColor="#484848">
-            <ig-badge position="bottom-right" type="info" icon="timer"></ig-badge>
-    </ig-avatar>
+    <igx-avatar initials="PP" width="100" color="black" icon="person" roundShape="false" bgColor="#94feed">
+        <igx-badge iconBdg="person" value="7281" position="bottom-left"></igx-badge>
+    </igx-avatar>
+
+    <igx-avatar src="http://66.media.tumblr.com/avatar_af166f12c520_128.png" size="medium" roundShape="true" bgColor="#e41c77">
+        <igx-badge position="top-left" type="error" icon="build"></igx-badge>
+    </igx-avatar>
+
+    <igx-avatar size="medium" src="http://fotouser.miarroba.st/99545357/300/sonic-kun.jpg" roundShape="true" bgColor="#484848">
+            <igx-badge position="bottom-right" type="info" icon="timer"></igx-badge>
+    </igx-avatar>
 </div>
