FIX: Styles after version change from zero-blocks to igniteui-js-blocks

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -94,8 +94,8 @@ h3
   .component-wrap
   {
     margin-bottom : 20px;
-    ig-switch,
-    ig-radio
+    igx-switch,
+    igx-radio
     {
       margin-bottom : em(10);
       display       : block;
