--- a/styles/components/_sections.scss
+++ b/styles/components/_sections.scss
@@ -180,8 +180,8 @@
   padding    : em(10) em(10) 0 em(10);
 }
 
-.ig-list__header,
-.ig-list__item
+.igx-list__header,
+.igx-list__item
 {
   padding : 0;
 }
