--- a/styles/gh-pages.scss
+++ b/styles/gh-pages.scss
@@ -11,6 +11,7 @@
 @import 'components/footer';
 @import 'components/navs';
 @import 'components/badges';
+@import 'components/progressbar';
 @import 'override';
 
 @import 'responsive';
