CHANGE: Updated old import references in the samples to point to igniteui-js-blocks.

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -16,7 +16,7 @@
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="list" routerLink="/list">List</span><span class="badge preview">preview</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="avatar" routerLink="/avatar">Avatar</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="navdrawer" routerLink="/navigation-drawer">Navigation Drawer</span><span class="badge preview">preview</span></a></li>
-                        <li #item [routerLinkActive]="'active'"><a><span data-demo="navbar" routerLink="/navbar">Navbar</span></a></li>
+                        <li #item [routerLinkActive]="'active'"><a><span data-demo="navbar" routerLink="/navbar">Navbar</span><span class="badge preview">preview</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="dialog" routerLink="/dialog">Dialog</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="progressbar" routerLink="/progressbar">Progress Indicators</span></a></li>
                     </ul>
