--- a/demos/progressbar/progressbar.component.html
+++ b/demos/progressbar/progressbar.component.html
@@ -1,5 +1,5 @@
 <h1 class="componentTitle">Progress Indicators</h1>
-<p class="componentDesc">A component used for branding, navigation, search, and actions.</p>
+<p class="componentDesc">A component used to show progress of data and/or state.</p>
 
 <div class="button-container">
     <button igxButton="fab" igxRipple="" (click)="generateNewProgressValues()">
