--- a/styles/gh-pages.scss
+++ b/styles/gh-pages.scss
@@ -12,6 +12,7 @@
 @import 'components/navs';
 @import 'components/badges';
 @import 'components/progressbar';
+@import 'components/carousel';
 @import 'override';
 
 @import 'responsive';
