--- a/src/checkbox/checkbox.component.html
+++ b/src/checkbox/checkbox.component.html
@@ -6,6 +6,7 @@
         [attr.tabindex]="tabindex"
         [attr.disabled]="disabled ? true : null"
         [checked]="checked"
+        [attr.aria-checked]="checked"
         (change)="onChange($event)"
         (focus)="onFocus($event)"
         (blur)="onBlur($event)">
