Added aria for radio

--- a/src/radio/radio.component.html
+++ b/src/radio/radio.component.html
@@ -4,6 +4,7 @@
         [attr.name]="name"
         [attr.value]="value"
         [attr.tabindex]="tabindex"
+        [attr.aria-checked]="checked"
         [disabled]="disabled"
         [checked]="checked"
         (change)="onChange($event)"
