--- a/src/tabbar/tab-content.component.html
+++ b/src/tabbar/tab-content.component.html
@@ -1,3 +1,3 @@
-<div #wrapper class="{{_itemStyle}}" [class.selected]="isSelected" >
+<div #tabwrapper class="{{_itemStyle}}" [class.selected]="isSelected" >
 	<ng-content></ng-content>
 </div>
