--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,11 +1,14 @@
-<nav class="igx-navbar">
-	<span class="igx-navbar__left-btn" [class.ig-navbar__left-btn--disabled]="canGoBack() || !hasIcon()">
-        <button igxButton="navbar" (click)="navigateBack($event)">
-            <i class="material-icons">{{ icon }}</i>
+<nav class="igx-navbar" role=”navigation”
+     [attr.aria-labelledby]="titleId">
+	<span class="igx-navbar__left-btn" [class.ig-navbar__left-btn--disabled]="isActionButtonVisible">
+        <button igxButton="navbar" (click)="_triggerAction()">
+            <i class="material-icons">{{ actionButtonIcon }}</i>
         </button>
     </span>
 	<span>
-        <h1 class="igx-navbar__title">{{ title }}</h1>
+        <h1 class="igx-navbar__title" [attr.id]="titleId">{{ title }}</h1>
     </span>
-	<ng-content></ng-content>
+	<span>
+        <ng-content></ng-content>
+    </span>
 </nav>
