--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -1,7 +1,7 @@
 <div class="{{_itemStyle}}">
 	<ng-content></ng-content>
 	<ul #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}" role="tablist" aria-orientation="horizontal">
-		<li *ngFor="let tab of _visibleTabs" class="{{_itemStyle}}__menu-item" [class.igx-tab-bar-inner__menu-item--selected]="tab.isSelected" [attr.aria-selected]="tab.isSelected" [class.igx-tab-bar-inner__menu-item--disabled]="tab.isDisabled" (click)="tab.select()" role="tab" [attr.aria-label]="tab.label">
+		<li *ngFor="let tab of _visibleTabs" class="{{_itemStyle}}__menu-item" [class.igx-tab-bar-inner__menu-item--selected]="tab.isSelected" [attr.aria-disabled]="tab.isDisabled" [attr.aria-selected]="tab.isSelected" [class.igx-tab-bar-inner__menu-item--disabled]="tab.isDisabled" (click)="tab.select()" role="tab" [attr.aria-label]="tab.label">
 			<div ngClass="tab-icon">
 				<i class="material-icons">{{tab.icon}}</i>
 				<span [class.igx-badge--hidden]="tab._changesCount == 0" class="igx-badge">{{tab._changesCount}}</span>
