--- a/src/tabbar/tab-panel.component.html
+++ b/src/tabbar/tab-panel.component.html
@@ -1,3 +1,3 @@
-<div #tab_panel_container class="{{_itemStyle}}" [class.selected]="isSelected" >
+<div #tab_panel_container class="{{_itemStyle}}" >
 	<ng-content></ng-content>
 </div>
