--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -2,7 +2,16 @@
     <ng-content></ng-content>
 </div>	
 <div #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}" role="tablist" aria-orientation="horizontal">
-    <igx-tab *ngFor="let panel of tabPanels" [class.igx-tab-bar-inner__menu-item--selected]="panel.isSelected"
-    [attr.aria-disabled]="panel.isDisabled" [attr.aria-selected]="panel.isSelected" [class.igx-tab-bar-inner__menu-item--disabled]="panel.isDisabled"
-    (click)="panel.select()" role="tab" [attr.aria-label]="panel.label"></igx-tab>
+    <igx-tab *ngFor="let panel of tabPanels" 
+             [label]="panel.label"
+             [icon]="panel.icon"
+             [color]="panel.color"
+             [isDisabled]="disabled"
+             [class.igx-tab-bar-inner__menu-item--selected]="panel.isSelected" 
+             [class.igx-tab-bar-inner__menu-item--disabled]="panel.isDisabled"
+             [attr.aria-disabled]="panel.isDisabled" 
+             [attr.aria-selected]="panel.isSelected" 
+             [attr.aria-label]="panel.label"
+             role="tab" >
+    </igx-tab>
 </div>
