--- a/src/progressbar/templates/circular-bar.component.html
+++ b/src/progressbar/templates/circular-bar.component.html
@@ -1,4 +1,8 @@
-<svg #svg class="progress-circular" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="none">
+<svg #svg class="progress-circular" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="none"
+    role="progressbar"
+    aria-valuemin="0"
+    [attr.aria-valuemax]="max"
+    [attr.aria-valuenow]="getValue()">
     <defs>
         <linearGradient id="linear" x1="-10%" y1="0%" x2="50%" y2="150%">
         <stop offset="0%"   stop-color="#0375BE"/>
