--- a/src/progressbar/templates/linear-bar.component.html
+++ b/src/progressbar/templates/linear-bar.component.html
@@ -1,6 +1,6 @@
 <div class="progress-linear"
     [class.progress-linear--striped]="striped">
-    <div #linearBar class="progress-linear__bar{{type ? '--' + type : ''}}"
+    <div #linearBar role="progressbar" class="progress-linear__bar{{type ? '--' + type : ''}}"
         aria-valuemin="0"
         [attr.aria-valuemax]="max"
         [attr.aria-valuenow]="getValue()"
