--- a/src/avatar/avatar.component.html
+++ b/src/avatar/avatar.component.html
@@ -1,9 +1,9 @@
-<div class="igx-avatar" aria-label="avatar">
+<div class="igx-avatar" aria-label="avatar" role="img">
     <img #image *ngIf="src || initials" src="{{src}}" class="igx-avatar--image igx-avatar--{{size}}" [class.igx-avatar--rounded]="isRounded"
-        [style.backgroundColor]="bgColor" [attr.role]="role" />
+        [style.backgroundColor]="bgColor" [attr.aria-roledescription]="roleDescription" />
     <span *ngIf="!src && !initials" class="igx-avatar--{{size}} igx-avatar--icon" [class.igx-avatar--rounded]="isRounded"
-            [style.backgroundColor]="bgColor" [style.color]="color" role="icon">
-        <i class="material-icons">{{icon}}</i>
+            [style.backgroundColor]="bgColor" [style.color]="color" [attr.aria-roledescription]="roleDescription">
+        <i class="material-icons" [attr.aria-roledescription]="roleDescription">{{icon}}</i>
     </span>
     <ng-content></ng-content>
 </div>
