--- a/src/tabbar/tab.component.html
+++ b/src/tabbar/tab.component.html
@@ -1,6 +1,6 @@
 <div ngClass="tab-icon">
-    <i class="material-icons">{{icon}}</i>
+    <i class="material-icons">{{relatedPanel.icon}}</i>
     <span [class.igx-badge--hidden]="_changesCount == 0" class="igx-badge">{{_changesCount}}</span>
 </div>
-<div ngClass="tab-label">{{label}}</div>
-<div ngClass="tab-color tab-color--{{color}}"></div>
+<div ngClass="tab-label">{{relatedPanel.label}}</div>
+<div ngClass="tab-color tab-color--{{relatedPanel.color}}"></div>
