#169 - Adapt test to new implemenbtation of tabbar

--- a/src/tabbar/tab-panel.component.html
+++ b/src/tabbar/tab-panel.component.html
@@ -1,3 +1,3 @@
-<div #tab_panel_container [style.height]="height" [style.marginTop]="marginTop" class="{{_itemStyle}}" >
+<div [style.height]="height" [style.marginTop]="marginTop" class="{{_itemStyle}}" >
 	<ng-content></ng-content>
 </div>
