--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -1,11 +1,13 @@
 <div>
     <ng-content></ng-content>
 </div>	
-<div  #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}" role="tablist" aria-orientation="horizontal">
+<div #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}" role="tablist" aria-orientation="horizontal">
     <igx-tab *ngFor="let panel of panels"
+             [id]="'igx-tab-' + panel.index"
              [attr.aria-label]= "panel.label"
              [attr.aria-disabled]="panel.isDisabled"
              [attr.aria-selected]="panel.isSelected"
+             [attr.aria-controls]="'igx-tab-panel-'+ panel.index"
              [class.igx-tab-bar-inner__menu-item--selected]="panel.isSelected"
              [class.igx-tab-bar-inner__menu-item--disabled]="panel.isDisabled"
              [relatedPanel]="panel"
