--- a/demos/app/card/sample.component.css
+++ b/demos/app/card/sample.component.css
@@ -1,11 +1,16 @@
-.card-list-container {
-    width: 600px;
-    height: 600px;
-    overflow-y: scroll;
-    display: inline-block;
+.cards-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
 
-.selected-visioner {
-    display: inline-block;
-    width: 700px;
+.cards-column {
+    display: flex;
+    flex-flow: column  wrap;
+}
+
+.card-wrapper {
+    max-width: 346px;
+    min-width: 300px;
+    margin: 21px;
 }
