--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -1,33 +1,201 @@
-<div>
-    <div class="card-list-container">
-        <igx-list>
-            <igx-list-item *ngFor="let visioner of visioners">
-                <igx-card (click)="handleCardClick(visioner)">
-                    <igx-card-header>
-                        <igx-avatar [src]="visioner.avatarUrl" roundShape="true">
-                            <h3>{{ visioner.name }}</h3>
-                        </igx-avatar>
-                    </igx-card-header>
+<div class="cards-container">
+    <!--<div *ngFor="let visioner of visioners">
+        <igx-card (click)="handleCardClick(visioner)">
 
-                    <img width="100%" [src]="visioner.imageUrl">
+            <img width="100%" [src]="visioner.imageUrl">
 
-                    <igx-card-content>
-                        <p>
-                            {{ visioner.about }}
-                        </p>
-                    </igx-card-content>
-
-                    <igx-card-actions>
-                        <button igxButton (click)="openUrl(visioner.facebook)">Like</button>
-                        <button igxButton (click)="openUrl(visioner.twitter)">Share</button>
-                    </igx-card-actions>
-                </igx-card>
-            </igx-list-item>
-        </igx-list>
-    </div>
+            <igx-card-header class="igx-card-header">
+                <h3 class="igx-card-header__title">{{ visioner.name }}</h3>
+                <h5 class="igx-card-header__subtitle">Visionary</h5>
+            </igx-card-header>
 
 
-    <div class="selected-visioner">
+            <igx-card-content>
+                <p class="igx-card-content__text">{{ visioner.about }}</p>
+            </igx-card-content>
+
+            <igx-card-actions>
+                <button igxButton (click)="openUrl(visioner.facebook)">Like</button>
+                <button igxButton (click)="openUrl(visioner.twitter)">Share</button>
+            </igx-card-actions>
+
+        </igx-card>
+    </div>-->
+
+    <section class="cards-column">
+
+        <article class="card-wrapper">
+            <igx-card>
+
+                <img height="194.5px" [src]="nyc.media.image">
+                
+                <igx-card-header>
+                    <h3 class="igx-card-header__title">{{ nyc.title }}</h3>
+                    <h5 class="igx-card-header__subtitle">{{ nyc.subtitle }}</h5>
+                </igx-card-header>
+
+
+                <igx-card-content>
+                    <p class="igx-card-content__text">{{ nyc.content }}</p>
+                </igx-card-content>
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__igroup--end">
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">favorite</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">bookmark</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">share</i>
+                        </span>
+                    </div>
+                </igx-card-actions>
+
+            </igx-card>
+        </article>
+
+        <article class="card-wrapper">
+            <igx-card>
+                <img height="194.5px" [src]="forest.media.image">
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__igroup--end">
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">favorite</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">bookmark</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">share</i>
+                        </span>
+                    </div>
+                </igx-card-actions>
+            </igx-card>
+        </article>
+
+    </section>
+
+    <section class="cards-column">
+
+        <article class="card-wrapper">
+            <igx-card>
+                <img height="194.5px" [src]="yosemite.media.image">
+
+                <igx-card-header>
+                    <h3 class="igx-card-header__title">{{ yosemite.title }}</h3>
+                    <h5 class="igx-card-header__subtitle">{{ yosemite.subtitle }}</h5>
+                </igx-card-header>
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__bgroup">
+                        <button igxButton igxButtonColor="#0375be" igxRipple>SHARE</button>
+                        <button igxButton igxButtonColor="#0375be" igxRipple>EXPLORE</button> 
+                    </div>
+                </igx-card-actions>
+            </igx-card>
+        </article>
+
+        <article class="card-wrapper">
+            <igx-card>
+                <igx-card-header>
+                    <h3 class="igx-card-header__title">{{ rosberg.title }}</h3>
+                    <h5 class="igx-card-header__subtitle">{{ rosberg.subtitle }}</h5>
+                </igx-card-header>
+
+                <igx-card-content>
+                    <p class="igx-card-content__text">{{ rosberg.content }}</p>
+                </igx-card-content>
+
+            </igx-card>
+        </article>
+
+
+        <article class="card-wrapper">
+            <igx-card>
+                <img height="130px" class="igx-card__media--right" [src]="alicia.media.image">
+                <div>
+
+                <igx-card-header class="compact">
+                    <igx-avatar [src]="alicia.avatar" roundShape="true"></igx-avatar>
+                    <div class="igx-card-header__tgroup">
+                        <h3 class="igx-card-header__title--small">{{ alicia.title }}</h3>
+                        <h5 class="igx-card-header__subtitle">{{ alicia.subtitle }}</h5>
+                    </div>
+                </igx-card-header>
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__bgroup">
+                        <button igxButton igxButtonColor="#0375be" igxRipple>Share</button>
+                        <button igxButton igxButtonColor="#0375be" igxRipple>Play Album</button> 
+                    </div>
+                </igx-card-actions>
+                </div>
+            </igx-card>
+        </article>
+        
+    </section>
+
+    <section class="cards-column">
+
+        <article class="card-wrapper">
+            <igx-card>
+
+                <img class="igx-card__media" height="346px" [src]="monuments.media.image">
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__igroup--start">
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">favorite</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">share</i>
+                        </span>
+                    </div>
+
+                    <div class="igx-card-actions__bgroup">
+                        <button igxButton igxButtonColor="#0375be" igxRipple>COMMENT</button>
+                        <button igxButton igxButtonColor="#0375be" igxRipple>EXPLORE</button> 
+                    </div>
+                </igx-card-actions>
+            </igx-card>
+        </article>
+
+        <article class="card-wrapper">
+            <igx-card>
+                <igx-card-header class="compact">
+                    <igx-avatar [src]="audi.avatar" roundShape="true"></igx-avatar>
+                    <div class="igx-card-header__tgroup">
+                        <h3 class="igx-card-header__title--small">{{ audi.title }}</h3>
+                        <h5 class="igx-card-header__subtitle">{{ audi.subtitle }}</h5>
+                    </div>
+                </igx-card-header>
+                <img height="194.5px" [src]="audi.media.image">
+
+                <igx-card-actions>
+                    <div class="igx-card-actions__igroup--start">
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">add</i>
+                        </span>
+                        <span igxButton="icon" igxRipple igxRippleCentered="true">
+                            <i class="material-icons">star</i>
+                        </span>
+                    </div>
+
+                    <div class="igx-card-actions__bgroup">
+                        <button igxButton igxButtonColor="#0375be" igxRipple>Message</button>
+                        <button igxButton igxButtonColor="#0375be" igxRipple>Follow</button> 
+                    </div>
+                </igx-card-actions>
+            </igx-card>
+        </article>
+
+    </section>
+</div>
+
+<!--<div class="selected-visioner">
         <igx-card (click)="handleCardClick(visioner)">
             <igx-card-header>
                 <igx-avatar [src]="selectedVisioner.avatarUrl" roundShape="true">
@@ -48,5 +216,4 @@
                 <button igxButton (click)="openUrl(selectedVisioner.twitter)">Share</button>
             </igx-card-actions>
         </igx-card>
-    </div>
-</div>
+    </div>-->
