--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -7,7 +7,7 @@
  *  1. Colors
  *  2. Badges
  *  3. Buttons
- *  TODO: 4. Cards
+ *  4. Cards
  *  TODO: 5. Collapsible
  *  TODO: 6. Chips
  *  TODO: 7. Date Picker
@@ -279,6 +279,34 @@ $button-icon-font-size: em(24px, 16px);
 // Navbar Buttons 
 $button-navbar-width: em(24px, 16px);
 $button-navbar-height: $button-navbar-width;
+
+/* 4. Cards
+   ========================================================================== */
+// Genaral
+$card-border-radius: 2px;
+
+
+// Colors
+$card-content-color: #757575;
+$card-subtitle-color: #757575;
+
+// Shadows
+$card-shadow: $elevate-2;
+$card-shadow-hover: $elevate-8;
+
+// Font Sizes
+$card-title-fontSize: em(24px, 16px);
+$card-title-line-height: em(24px, 16px);
+$card-subtitle-fontSize: em(14px, 16px);
+$card-subtitle-line-height: em(24px, 16px);
+$card-content-fontSize: em(14px, 16px);
+$card-content-lineHeight: (20px, 16px);
+
+// Padding & Margin
+$card-heading-padding: em(24px, 16px) em(16px, 16px) em(16px, 16px) em(16px, 16px);
+$card-heading-compact-padding: em(16px, 16px);
+$card-content-padding: em(16px, 16px);
+$card-actions-padding: em(8px, 16px);
 
 /* 9. Fonts
    ========================================================================== */
