Added role for toast.component

--- a/src/toast/toast.component.html
+++ b/src/toast/toast.component.html
@@ -1,3 +1,5 @@
-<div class="igx-toast" [ngClass]="_mapPositionToClassName(position)">
+<div class="igx-toast"
+     role="alert"
+     [ngClass]="_mapPositionToClassName(position)">
     {{ message }}
 </div>
