--- a/src/toast/toast.component.html
+++ b/src/toast/toast.component.html
@@ -1,5 +1,3 @@
-<div class="igx-toast"
-     role="alert"
-     [ngClass]="_mapPositionToClassName(position)">
+<div [ngClass]="_mapPositionToClassName(position)" *ngIf="this.isVisible" [@showHide]="this.state">
     {{ message }}
 </div>
